src/templates/state/race-ethnicity/index.module.scss
.selector-and-charts {
  @include margin(32, top);
  @include margin(16);
}

